<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_one"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"

        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roots"
            android:text="@string/roots"
            android:onClick="selectAnswer"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaves"
            android:text="@string/leaves"
            android:onClick="selectAnswer"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stem"
            android:text="@string/stem"
            android:onClick="selectAnswer"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_two"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roots1"
            android:text="@string/roots"
            android:onClick="selectAnswer1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaves1"
            android:text="@string/leaves"
            android:onClick="selectAnswer1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stem1"
            android:text="@string/stem"
            android:onClick="selectAnswer1"/>

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_three"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roots2"
            android:text="@string/roots"
            android:onClick="selectAnswer2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaves2"
            android:text="@string/leaves"
            android:onClick="selectAnswer2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stem2"
            android:text="@string/stem"
            android:onClick="selectAnswer2"/>

    </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_four"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:textAppearanceMedium"
            />
        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/stem"
            android:id="@+id/stem3"
            android:onClick="question4"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roots"
        android:id="@+id/root3"
        android:onClick="question4"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:id="@+id/none"
        android:onClick="question4"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_five"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_gravity="left"
        android:layout_marginTop="24dp"
        android:layout_marginStart="10dp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roots4"
            android:text="@string/roots"
            android:onClick="selectAnswer3"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaves4"
            android:text="@string/leaves"
            android:onClick="selectAnswer3"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stem4"
            android:text="@string/stem"
            android:onClick="selectAnswer3"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitAnswer"
        android:text="@string/submit"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:textStyle="bold"
        />


</LinearLayout>
</ScrollView>